--- a/css/color.css
+++ b/css/color.css
@@ -1,2 +1,7 @@
 /* CSS COLOR */
 /* **************************************************************** */
+:root{
+    --colorBlack: #3A3A3A;
+    --colorWhite: #F5F5F5;
+    --colorOrange: #FFCB13;
+}
