--- a/css/grid.css
+++ b/css/grid.css
@@ -1,2 +1,8 @@
 /* CSS GRID */
 /* **************************************************************** */
+
+.grid1x3{
+    display: grid;
+    grid-template-columns: 100vw;
+    grid-template-rows: 60px 1fr 450px;
+}
